Fixes #37 - Ajout des reactions a un post