@@ -4,50 +4,44 @@ import fr.univartois.butinfo.s5.api_rest.dto.page.PageCreateDto;
 import fr.univartois.butinfo.s5.api_rest.dto.page.PageDetailDto;
 import fr.univartois.butinfo.s5.api_rest.dto.page.PageSummaryDto;
 import fr.univartois.butinfo.s5.api_rest.model.Page;
-import org.springframework.stereotype.Component;
+import fr.univartois.butinfo.s5.api_rest.model.User;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.mapstruct.Named;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Component
-public class PageMapper {
+@Mapper(componentModel = "spring", imports = {LocalDateTime.class, List.class, User.class, Collections.class})
+public interface PageMapper {
 
-    public PageDetailDto toDetailDto(Page page) {
-        if (page == null) return null;
+    @Mapping(target = "adminIds", source = "admin", qualifiedByName = "mapUsersToIds")
+    PageDetailDto toDetailDto(Page page);
 
-        return new PageDetailDto(
-                page.getId(),
-                page.getName(),
-                page.getDescription(),
-                page.getAvatarUrl(),
-                page.getAdminIds(), // Correction : getAdminIds() existe maintenant
-                page.getFollowerCount(),
-                page.getTopics(),
-                page.getCreatedAt()
-        );
+    PageSummaryDto toSummaryDto(Page page);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "admin", source = "creatorUserId", qualifiedByName = "mapCreatorToAdminList")
+    @Mapping(target = "followerCount", constant = "0")
+    @Mapping(target = "createdAt", expression = "java(LocalDateTime.now())")
+    @Mapping(target = "updatedAt", ignore = true)
+    @Mapping(target = "avatarUrl", ignore = true)
+    Page toEntity(PageCreateDto dto, String creatorUserId);
+
+
+    @Named("mapUsersToIds")
+    default List<String> mapUsersToIds(List<User> admins) {
+        if (admins == null) return Collections.emptyList();
+        return admins.stream()
+                .map(User::getId)
+                .collect(Collectors.toList());
     }
 
-    public PageSummaryDto toSummaryDto(Page page) {
-        if (page == null) return null;
-
-        return new PageSummaryDto(
-                page.getId(),
-                page.getName(),
-                page.getAvatarUrl(),
-                page.getFollowerCount()
-        );
-    }
-
-    public Page toEntity(PageCreateDto dto, String creatorUserId) {
-        if (dto == null) return null;
-
-        return Page.builder()
-                .name(dto.name())
-                .description(dto.description())
-                .topics(dto.topics())
-                .adminIds(List.of(creatorUserId)) // On met le créateur comme premier admin
-                .followerCount(0)
-                .createdAt(LocalDateTime.now())
-                .build();
+    @Named("mapCreatorToAdminList")
+    default List<User> mapCreatorToAdminList(String creatorUserId) {
+        if (creatorUserId == null) return Collections.emptyList();
+        return List.of(User.builder().id(creatorUserId).build());
     }
 }
